--- a/shining/sixth.html
+++ b/shining/sixth.html
@@ -59,14 +59,14 @@
 Contacts: 
 					</span>
 					<em>
-Shaohua Wang(English)&nbsp;&nbsp;&nbsp;马蘅晶(Japanese)
+Shaowen Wang(English)&nbsp;&nbsp;&nbsp;王少文(Chinese)
 					</em>
 				</div>
 				<div id="bd_s">
 					<img src="img/contact_mail.jpg" alt="" />
 					<span>Email: </span>
 					<em>
-shaohua@shiningcg.com(English)&nbsp;&nbsp;&nbsp;2355757511@qq.com(Japanese)
+wangshaowen@163.com(English)&nbsp;&nbsp;&nbsp;784792024@qq.com(Chinese)
 					</em>
 				
 				</div>
@@ -74,15 +74,15 @@ shaohua@shiningcg.com(English)&nbsp;&nbsp;&nbsp;2355757511@qq.com(Japanese)
 					<div  id ="bd_t_1" class="float">
 						<div><img src="img/contact_phone.png" alt="" /></div>
 						<div>
-							<p>+86 21 6598 6866-661</p>
-							<p>+86 21 6598 3188-660</p>
+							<p>+86 88 8888 8888-888</p>
+							<p>+86 88 8888 8888-888</p>
 						</div>
 					</div>
 					<div id ="bd_t_2" class="float">
 						<div><img src="img/iphone.png" alt="" /></div>
 						<div id="phonenum">
-							<p>+86 138 1633 9106</p>
-							<p>+86 186 1602 9584</p>
+							<p>+86 186 3466 5891</p>
+							<p>+86 186 3466 5891</p>
 						</div>
 					</div>
 					<div id ="bd_t_3" class="float">
